# game-of-life

./: CMakeLists.txt  main.c  readme.md
